# segatools-private

./: .gitignore  README.md  assert.h  meson.build
_vcxproj/: segatools.sln
_vcxproj/aimeio/: aimeio.vcxproj  aimeio.vcxproj.filters
_vcxproj/chunewhook/: chunewhook.vcxproj  chunewhook.vcxproj.filters
_vcxproj/chunihook/: chunihook.vcxproj  chunihook.vcxproj.filters
_vcxproj/chuniio/: chuniio.vcxproj  chuniio.vcxproj.filters
_vcxproj/chusanhook/: chusanhook.vcxproj  chusanhook.vcxproj.filters
_vcxproj/hooklib/: hooklib.vcxproj  hooklib.vcxproj.filters
_vcxproj/inject/: inject.vcxproj  inject.vcxproj.filters
chunewhook/: config.c  config.h  dllmain.c  io4.c  io4.h  meson.build  slider.c
chusanhook/: chuni-dll.c  chusanhook.def  config.c  config.h  dllmain.c  io4.c  io4.h  meson.build  slider.c
hooklib/: dll.c  gfx.c  reg.c
